main file modified

--- a/Mall_customer.ipynb
+++ b/Mall_customer.ipynb
@@ -99,7 +99,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('/Users/vikas/Desktop/MLC/MLC4/Mall_Customers.csv')"
+    "df = pd.read_csv('/Users/Mall_Customers.csv')"
    ]
   },
   {
